6-firewalls.tf
# https://registry.terraform.io/providers/hashicorp/google/latest/docs/resources/compute_firewall

# Allow SSH (TCP:22)

resource "google_compute_firewall" "allow-ssh" {
  name    = "allow-ssh"
  network = google_compute_network.main.name

  allow {
    protocol = "tcp"
    ports    = ["22"]
  }

  target_tags   = ["ssh"]
  source_ranges = ["0.0.0.0/0"]
}

# Allow HTTP-HTTPS (Web)

resource "google_compute_firewall" "allow-webserver" {
  name    = "allow-webserver"
  network = google_compute_network.main.name

  allow {
    protocol = "tcp"
    ports    = ["80", "443"]
  }

  target_tags   = ["web"]
  source_ranges = ["0.0.0.0/0"]
}

# Allow ICMP (Ping)

resource "google_compute_firewall" "allow-icmp" {
  name    = "allow-icmp"
  network = google_compute_network.main.name

  allow {
    protocol = "icmp"
  }

  source_ranges = ["0.0.0.0/0"]
}
